deployment/k8s/auth-service-svc-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: authentication-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - image: sakuuj/authentication-service
          name: authentication-service
          imagePullPolicy: Always
