deployment/k8s/examples-svc-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: cfg-examples-svc
spec:
  ports:
    - port: 8080
      targetPort: 7000
      protocol: TCP
  selector:
    app: cfg-examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfg-examples
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cfg-examples
  template:
    metadata:
      labels:
        app: cfg-examples
    spec:
      containers:
        - image: sakuuj/cfg-examples
          name: cfg-examples
          imagePullPolicy: Always
