deployment/k8s/keycloak-svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - image: sakuuj/keycloak
          name: keycloak
          imagePullPolicy: Always
