deployment/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-server-svc
                port:
                  number: 8080
    - http:
        paths:
          - path: /processor
            pathType: Prefix
            backend:
              service:
                name: cfg-processor-svc
                port:
                  number: 8080
    - http:
        paths:
          - path: /examples
            pathType: Prefix
            backend:
              service:
                name: cfg-examples-svc
                port:
                  number: 8080
